# horragor

./: .env.example  .gitignore  README.md  demo_pipeline.ipynb  pyproject.toml
data/gold/: .gitkeep  sample_gold.parquet
docs/merise/: .gitkeep  MPD.sql
scripts/: build_imdb_db.py  generate_merise.py
src/: __init__.py  config.py  pipeline.py
src/extractors/: __init__.py  imdb_extractor.py  kaggle_extractor.py  rotten_tomatoes_scraper.py  spark_extractor.py  tmdb_extractor.py
src/loaders/: __init__.py  supabase_loader.py
src/models/: __init__.py  schema.py
src/transformers/: __init__.py  deduplicator.py  merger.py  normalizer.py
tests/: __init__.py  test_pipeline.py
